# dafpy

./: .gitignore  LICENSE.rst  Makefile  README.rst  juliapkg.json  pyproject.toml
daf/: __init__.py  adapters.py  anndata_format.py  concat.py  copies.py  data.py  formats.py  generic.py  generic_functions.py  generic_logging.py  julia_import.py  operations.py  queries.py  reconstruction.py  storage_types.py  views.py
dafpy/: __init__.py  adapters.py  anndata_facade.py  anndata_format.py  concat.py  copies.py  data.py  example_data.py  formats.py  generic_functions.py  generic_logging.py  julia_import.py  operations.py  queries.py  reconstruction.py  storage_types.py  views.py
docs/: API.rst  Makefile  adapters.rst  anndata_facade.rst  concat.rst  conf.py  copies.rst  example_data.rst  formats.rst  generic_functions.rst  generic_logging.rst  index.rst  julia_import.rst  operations.rst  queries.rst  storage_types.rst
docs/v0.1.0/html/: .buildinfo  API.html  adapters.html  anndata_format.html  concat.html  copies.html  data.html  formats.html  generic_functions.html  generic_logging.html  genindex.html  import_julia.html  index.html  julia_import.html  objects.inv  operations.html  py-modindex.html  queries.html  readme.html  search.html  searchindex.js  storage_types.html  views.html
docs/v0.1.0/html/_modules/: daf.html  index.html  types.html  typing.html
docs/v0.1.0/html/_sources/: API.rst.txt  data.rst.txt  formats.rst.txt  storage_types.rst.txt
docs/v0.1.1/html/: .buildinfo  API.html  adapters.html  anndata_facade.html  anndata_format.html  concat.html  copies.html  data.html  example_data.html  formats.html  generic_functions.html  generic_logging.html  genindex.html  index.html  julia_import.html  objects.inv  operations.html  py-modindex.html  queries.html  readme.html  reconstruction.html  search.html  searchindex.js  storage_types.html  views.html
docs/v0.1.1/html/_modules/: index.html  typing.html
docs/v0.1.1/html/_sources/: API.rst.txt  adapters.rst.txt  anndata_format.rst.txt  concat.rst.txt  copies.rst.txt  (+8 more)
tests/: test_adapters.py  test_anndata_facade.py  test_anndata_format.py  test_concat.py  test_copies.py  test_example_data.py  test_fake.py  test_formats.py  test_generic.py  test_queries.py  test_reconstruction.py  test_views.py  utilities.py
(+27 files in other folders)
